[tool.poetry]
name = "commuter"
version = "0.1.0"
description = ""
authors = ["Jo Chuang <josephch405@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
googlemaps = "^4.6.0"
pandas = "^1.4.1"
google-api-python-client = "^2.39.0"
isodate = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
